Penambahan dikit" belum beres semua

--- a/index.html
+++ b/index.html
@@ -487,8 +487,31 @@
 
         <!--==================== SERVICES ====================-->
         <section class="services section" id="services">
+            <h2 class="section__title">Services</h2>
+            <span class="section__subtitle">What i offer</span>
 
+            <div class="services__container container grid">
+           <!--==================== SERVICES 1 ====================-->
+           <div class="services__content">
+               <div>
+                <i class="uil uil-web-grid services__icon"></i>
+                <h3 class="services__title">Ui/Ux <br> Designer </h3>
+               </div>
 
+               <span class="button button--flex button--small button-link services__button">
+                   View More
+                   <i class="uil uil-arrow-right button__icon"></i>
+               </span>
+
+               <div class="services__modal">
+                   <div class="services__modal-content">
+                       <h4 class="services__modal-title">Ui/Ux <br> Designer</h4>
+                       
+                   </div>
+               </div>
+           </div>
+
+            </div>
         </section>
 
         <!--==================== PORTFOLIO ====================-->
