--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
                 
                 <div class="home__data">
-                    <h1 class="home__title">Hi, I'm Fadhila</h1>
+                    <h1 class="home__title">Hi, I'm Muhammad Fadhila Abiyyu Faris</h1>
                     <h3 class="home__subtitle">Fullstack developer</h3>
                     <p class="home__description">
                         High level experience in web design and web development knowledge,
